# saifbot

./: .env.example  .gitignore  Cargo.toml  README.md  push.sh
src/: main.rs  rpc_manager.rs
src/engine/: mod.rs  monitor.rs  scoring.rs
src/trading/: mod.rs
