[package]
name = "saha-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
solana-client = "1.17"
solana-sdk = "1.17"
solana-transaction-status = "1.17"
anchor-client = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
teloxide = { version = "0.12", features = ["macros"] }
ratatui = "0.24"
crossterm = "0.27"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
url = "2.5"
dashmap = "5.5"
rand = "0.8"
dotenvy = "0.15"

[lib]
name = "saha_sniper"
path = "src/lib.rs"
